@@ -1,31 +1,41 @@
 package com.munsun.cloud_disk.security;
 
-import com.munsun.cloud_disk.model.Role;
+import com.munsun.cloud_disk.advice.ExceptionControllerAdvice;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.provisioning.InMemoryUserDetailsManager;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebMvc
-public class Config {
+public class SecurityConfig {
     @Autowired
     private JwtFilter jwtFilter;
+    @Autowired
+    private ExceptionControllerAdvice exceptionControllerAdvice;
+
+    private static final String AUTHENTICATION_ENTRY_POINT = "/login";
+
+    @Value("${security.access.allowed_methods}")
+    private String allowedMethods;
+    @Value("${security.access.allowed_headers}")
+    private String allowedHeaders;
+    @Value("${security.access.outer_source.url}")
+    private String allowedOuterSource;
+
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -36,29 +46,26 @@ public class Config {
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(request -> {
-                    request.requestMatchers("/login").permitAll()
+                    request.requestMatchers(AUTHENTICATION_ENTRY_POINT).permitAll()
                             .anyRequest().authenticated();
                 })
                 .addFilterAfter(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                 .cors(cors -> cors.configurationSource(myWebsiteConfigurationSource()))
+                .exceptionHandling((handler) -> {
+                    handler.authenticationEntryPoint(exceptionControllerAdvice);
+                })
                 .build();
     }
 
     @Bean
     CorsConfigurationSource myWebsiteConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
+        var configuration = new CorsConfiguration();
             configuration.setAllowCredentials(true);
-            configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
-            configuration.setAllowedMethods(Arrays.asList("*"));
-            configuration.setAllowedHeaders(Arrays.asList("*"));
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+            configuration.setAllowedOrigins(Collections.singletonList(allowedOuterSource));
+            configuration.setAllowedMethods(List.of(allowedMethods));
+            configuration.setAllowedHeaders(List.of(allowedHeaders));
+        var source = new UrlBasedCorsConfigurationSource();
             source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-
-    @Bean
-    UserDetailsService userDetailsService() {
-        return new InMemoryUserDetailsManager(
-                new User("admin", "admin", Role.ADMIN.getPermissions()));
     }
 }
